Revision history for Perl extension IOC.

0.24
    + Added IOC::Config::XML     
        - added tests and documentation for this
        - added XML::Simple as a dependency

    * IOC::Exceptions
        - added some expecptions for IOC::Config::XML
            ~ IOC::ConfigurationError
            

0.23 Fri Jan 14 2005
    * IOC::Registry
        - added aliasService() method so that you
          can alias one service path for another
            - added tests for this
            - added docs for this

0.22 Mon Dec 27 2004
    * IOC::Service::ConstructorInjection
    * IOC::Service::SetterInjection    
        - fixed class loading error in both, these
          services will load your class if it is not
          loaded already, and they were not doing
          it correctly. 
            - added tests to confirm fixes

0.21 Sat Dec 25 2004 (Merry Christmas)
    + Added IOC::Service::Literal
        - this is an optimization to allow for literal
          values to be held as services without them 
          needing to be wrapped in subroutines.
        - added documentation for this
        - added tests for this
        
    * IOC::Container
        - optmized this for IOC::Service::Literal objects
          since they cannot have dependencies, and therefore
          cannot have circular references there is no need to 
          fuss with them (lock, deferred, etc). 

0.20 Thurs Dec 23 2004
    * IOC::Service::ConstructorInjection
        - added support for getting constructor args
          which are outside of the current container
          and can be located with find()
            - added tests for this
            - added to the docs for this
            
    * IOC::Service::SetterInjection
        - added support for getting setter args
          which are outside of the current container
          and can be located with find()
            - added tests for this
            - added to the docs for this

0.19 Thurs Dec 23 2004
    * IOC::Proxy