@@ -4,7 +4,7 @@ package IOC::Service::ConstructorInjection;
 use strict;
 use warnings;
 
-our $VERSION = '0.06';
+our $VERSION = '0.07';
 
 use Scalar::Util qw(blessed);
 
@@ -41,7 +41,12 @@ sub _init {
             # not, then require it            
             eval { 
                 no strict 'refs';
-                %{"${component_class}::"};
+                # check for the symbol table itself ...
+                (keys %{"${component_class}::"} ||
+                    # and then to be sure, lets look for  
+                    # either the VERSION or the ISA variables
+                    (defined ${"${component_class}::VERSION"} 
+                        || defined @{"${component_class}::ISA"})) ? 1 : 0;
             } || eval "use $component_class";
             # throw our exception if the class fails to load
             throw IOC::ClassLoadingError "The class '$component_class' could not be loaded" => $@ if $@;
